--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -19,7 +19,7 @@
     <div text-center>
         <ion-spinner color="primary" *ngIf="loading"></ion-spinner>
     </div>
-    <ion-card *ngIf="categorias.length > 0 && query.length == 0">
+    <ion-card *ngIf="categorias.length > 0">
         <ion-list>
             <ion-list-header>
                 Categorias
