--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="UTF-8">
   <title>Ionic App</title>
@@ -10,7 +11,7 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
-  
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
@@ -26,10 +27,14 @@
   <link href="build/main.css" rel="stylesheet">
 
 </head>
+
 <body>
 
-  <!-- Ionic's root component and where the app will load -->
-  <ion-app></ion-app>
+  <ion-app>
+    <div style="text-align:center; height:800px; background-image: url('http://newton.eycproveedores.com/newton/public/img/fondo (1).jpg');">
+      <img src="http://newton.eycproveedores.com/newton/public/img/logo-newton.png" style="height:120px; margin-top:20%" alt="">
+    </div>
+  </ion-app>
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
@@ -38,4 +43,5 @@
   <script src="build/main.js"></script>
 
 </body>
+
 </html>
