--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,60 +1,63 @@
 <ion-header>
 
-    <ion-navbar color="primary">
-        <ion-title>Profile</ion-title>
-    </ion-navbar>
+  <ion-navbar color="primary">
+    <button menuToggle="" ion-button="" icon-oly>
+          <ion-icon name="menu"></ion-icon>
+      </button>
+    <ion-title>Perfil</ion-title>
+  </ion-navbar>
 
 </ion-header>
 
 
 <ion-content>
-    <ion-card>
-        <ion-grid>
-            <ion-row>
-                <ion-col width-25="">
-                    <img [src]="api.user.imagen" alt="">
-                </ion-col>
-                <ion-col>
-                    <p>
-                        <b>Nombre: </b> <span> {{api.user.nombre}}</span>
-                    </p>
-                    <p>
-                        <b>Email: </b> <span> {{api.user.email}}</span>
-                    </p>
-                    <p *ngIf="api.user.cliente">
-                        {{api.user.cliente.full_name}}
-                    </p>
-                </ion-col>
-            </ion-row>
-        </ion-grid>
-    </ion-card>
+  <ion-card>
     <ion-grid>
-        <ion-row wrap responsive-sm>
-            <ion-col width-50=""></ion-col>
-            <ion-col width-50="">
-                <ion-card>
-                    <ion-card-title>
-                        <h2 text-center ion-text color="primary">Cambiar Contraseña</h2>
-                    </ion-card-title>
-                    <ion-item>
-                        <ion-label floating> Contraseña Antigua</ion-label>
-                        <ion-input type="password"></ion-input>
-                    </ion-item>
-                    <ion-item>
-                        <ion-label floating> Contraseña Nueva</ion-label>
-                        <ion-input type="password"></ion-input>
-                    </ion-item>
-                    <ion-item>
-                        <ion-label floating> Confirmar Contraseña</ion-label>
-                        <ion-input type="password"></ion-input>
-                    </ion-item>
-                </ion-card>
-            </ion-col>
-        </ion-row>
+      <ion-row>
+        <ion-col col-4="">
+          <img [src]="api.user.imagen" alt="">
+        </ion-col>
+        <ion-col>
+          <p>
+            <b>Nombre: </b> <span> {{api.user.nombre}}</span>
+          </p>
+          <p>
+            <b>Email: </b> <span> {{api.user.email}}</span>
+          </p>
+          <p *ngIf="api.user.cliente">
+            {{api.user.cliente.full_name}}
+          </p>
+        </ion-col>
+      </ion-row>
     </ion-grid>
+  </ion-card>
+  <ion-grid>
+    <ion-row wrap responsive-sm>
+      <!--<ion-col col-6></ion-col>-->
+      <ion-col col-12>
+        <ion-card>
+          <ion-card-title>
+            <h2 text-center ion-text color="primary">Cambiar Contraseña</h2>
+          </ion-card-title>
+          <ion-item>
+            <ion-label floating> Contraseña Antigua</ion-label>
+            <ion-input type="password"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label floating> Contraseña Nueva</ion-label>
+            <ion-input type="password"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label floating> Confirmar Contraseña</ion-label>
+            <ion-input type="password"></ion-input>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
 
 <ion-footer>
-    <button ion-button full color="secondary"><ion-icon name="save"></ion-icon>  Guardar</button>
+  <button ion-button full color="secondary"><ion-icon name="save"></ion-icon>  Guardar</button>
 </ion-footer>
